# serializer version: 1
# name: test_buttons[button.test_flash_lights-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_flash_lights',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:flashlight',
    'original_name': 'Flash lights',
    'platform': 'tessie',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'flash_lights',
    'unique_id': 'VINVINVIN-flash_lights',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.test_flash_lights-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Flash lights',
      'icon': 'mdi:flashlight',
    }),
    'context': <ANY>,
    'entity_id': 'button.test_flash_lights',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.test_homelink-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_homelink',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:garage',
    'original_name': 'Homelink',
    'platform': 'tessie',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'trigger_homelink',
    'unique_id': 'VINVINVIN-trigger_homelink',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.test_homelink-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Homelink',
      'icon': 'mdi:garage',
    }),
    'context': <ANY>,
    'entity_id': 'button.test_homelink',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.test_honk_horn-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_honk_horn',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:bullhorn',
    'original_name': 'Honk horn',
    'platform': 'tessie',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'honk',
    'unique_id': 'VINVINVIN-honk',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.test_honk_horn-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Honk horn',
      'icon': 'mdi:bullhorn',
    }),
    'context': <ANY>,
    'entity_id': 'button.test_honk_horn',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.test_keyless_driving-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_keyless_driving',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:car-key',
    'original_name': 'Keyless driving',
    'platform': 'tessie',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'enable_keyless_driving',
    'unique_id': 'VINVINVIN-enable_keyless_driving',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.test_keyless_driving-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Keyless driving',
      'icon': 'mdi:car-key',
    }),
    'context': <ANY>,
    'entity_id': 'button.test_keyless_driving',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.test_play_fart-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_play_fart',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:volume-high',
    'original_name': 'Play fart',
    'platform': 'tessie',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'boombox',
    'unique_id': 'VINVINVIN-boombox',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.test_play_fart-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Play fart',
      'icon': 'mdi:volume-high',
    }),
    'context': <ANY>,
    'entity_id': 'button.test_play_fart',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_buttons[button.test_wake-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.test_wake',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:sleep-off',
    'original_name': 'Wake',
    'platform': 'tessie',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'wake',
    'unique_id': 'VINVINVIN-wake',
    'unit_of_measurement': None,
  })
# ---
# name: test_buttons[button.test_wake-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Wake',
      'icon': 'mdi:sleep-off',
    }),
    'context': <ANY>,
    'entity_id': 'button.test_wake',
    'last_changed': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
